# OpengGLTriangle

./: .gitignore  CMakeLists.txt  FragmentShader.vs  README.md  VertexShader.vs  main.cpp
include/: shader.h
src/: main.cpp  shader.cpp
